manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: flaskapp
spec:
  type: ClusterIP
  selector:
    app: flaskapp
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
