manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp
  namespace: flaskapp
spec:
  rules:
    - host: flaskapp.prsmalley.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskapp
                port:
                  number: 5000
